# PanelsDrillSegmentation

./: .gitignore  .gitmodules  README.md  conventional_methods_benchmark.py  crop_data.py  datasetSummary.py  dataset_summary.py  make_conventional_comparisson_diagrams.py  make_photo_comparison_graphics.py  predict.py  processing.py  render_diagrams.py  render_video.py  rendering_labels_as_circles.py  testTranslation.py  train.py  utilities.py
conventional_method_cpp/: CMakeLists.txt  main.cpp
conventional_method_matlab/: fuzzy_edge.m
conventional_method_python/: EnFCM.py  FCM.py  MFCM.py  conventional_methods.py  test_conventional_methods.py
data_preparation/: cropped_original_images.py
evaluation/: statistics.py
models/: autoencoder.py  custom_layers.py  data_loader.py  losses.py
statistics/: hole_statistics.py
